# statebridge-protocol-SBP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: implementation-bug.md  spec-proposal.md  spec-question.md
.github/workflows/: conformance-self-test.yml  pages.yml  reference-server-tests.yml  validate-schemas.yml
conformance/: README.md  runner.py
docs/: .gitignore  Gemfile  _config.yml  getting-started.md  implementations.md  index.md  why-sbp.md
docs/concepts/: federation.md  lineage.md  mcp-bridge.md  resume.md  roaming.md  surfaces.md  tether.md
docs/reference/: conformance-levels.md  error-codes.md  http-api.md  websocket-frames.md
reference/client-typescript/: README.md  package.json  tsconfig.json
reference/server-python/: README.md  pyproject.toml
reference/server-python/sbp_server/: __init__.py  app.py  cli.py  demo.py  token.py  ws_connection_manager.py
reference/server-python/sbp_server/backends/: README.md  base.py  memory.py  postgres.py  sqlite.py
reference/server-python/sbp_server/models/: completions.py
reference/server-python/sbp_server/routers/: completions.py  sbp.py  sbp_ws.py
reference/server-python/tests/: test_conformance.py
spec/: SPEC.md
spec/examples/: 01-l1-stateful-proxy.http  02-l2-resume.http  03-l3-export.http  04-l3-import.http  05-l3-handoff.http  06-l3-fork.http  07-l4-attach-with-surface.json  08-l5-tool-call.json  09-l5-tool-result.json
spec/schemas/: completions-request.schema.json  (+6 more)
(+20 files in other folders)
